Added AudioPlayerException and sending errors to dart code

--- a/linux/CMakeLists.txt
+++ b/linux/CMakeLists.txt
@@ -37,9 +37,7 @@ list(APPEND PLUGIN_SOURCES
 
 # Define the plugin library target. Its name must not be changed (see comment
 # on PLUGIN_NAME above).
-add_library(${PLUGIN_NAME} SHARED
-  ${PLUGIN_SOURCES}
-)
+add_library(${PLUGIN_NAME} SHARED ${PLUGIN_SOURCES})
 
 # Apply a standard set of build settings that are configured in the
 # application-level CMakeLists.txt. This can be removed for plugins that want
